--- a/src/main.html
+++ b/src/main.html
@@ -6,6 +6,14 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/styles.css">
+    <style>
+        .color-block {
+            width: 100px;
+            height: 100px;
+            display: inline-block;
+            margin: 10px;
+        }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -58,7 +66,31 @@
       </div>
     </div>
 
+    <div class="container">
+        <p style="background-color: rgb(35,57,93);">Azul obscuro</p>
+        <p style="background-color: rgb(57,86,125);">Azul medio</p>
+        <p style="background-color: rgb(89,119,156);">Azul claro</p>
+        <!--
+        <p style="background-color: rgb(149,166,182);">Gris Azulado</p>
+        <p style="background-color: rgb(187,194,199);">Gris Medio</p>
+        <p style="background-color: rgb(221,225,228);">Gris Claro</p>
+        -->
+        <p style="background-color: rgb(169,186,202);">Gris Azulado</p>
+        <p style="background-color: rgb(207,214,219);">Gris Medio</p>
+        <p style="background-color: rgb(241,245,248);">Gris Claro</p>
+
+        <div class="color-block" style="background-color: rgb(35, 57, 93);"></div>
+    <div class="color-block" style="background-color: rgb(57, 86, 125);"></div>
+    <div class="color-block" style="background-color: rgb(89, 119, 156);"></div>
+    <div class="color-block" style="background-color: rgb(169, 186, 202);"></div>
+    <div class="color-block" style="background-color: rgb(207, 214, 219);"></div>
+    <div class="color-block" style="background-color: rgb(241, 245, 248);"></div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="main.js"></script>
+    <!-- Coolors Palette Widget -->
+    <script src="https://coolors.co/palette-widget/widget.js"></script>
+    <script data-id="02667216942245456">new CoolorsPaletteWidget("02667216942245456", ["c5d5ea","759eb8","7392b7","b3c5d7","d8e1e9"]); </script>
   </body>
 </html>
