--- a/src/h1.html
+++ b/src/h1.html
@@ -9,10 +9,12 @@
   </head>
   <body>
 
-    <!-- H1 example -->
-    <h1 class="h1cst">Hello, world!</h1>
+    <section id="main_container">
+      <!-- H1 example -->
+      <h1>Hello, world!</h1>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+      <script src="main.js"></script>
+    </section> 
   </body>
 </html>
